<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Recipmon</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="title_activity_add_recipe">AddRecipeActivity</string>
    <string name="add_recipe_name">Recipe name</string>
    <string name="add_recipe_header_recipe">Details</string>
    <string name="add_recipe_steps">Steps</string>
    <string name="preference_key_file">com.finaiized.recipmon.PREFERENCES</string>
    <string name="preference_key_recipe">com.finaiized.recipmon.PREFERENCES.recipes</string>
    <string name="title_activity_recipe_view">RecipeViewActivity</string>
    <string name="add_recipe_description">Recipe description</string>
    <string name="action_delete">Delete recipe</string>
    <string name="delete_message">This recipe will be removed from your device.</string>
    <string name="delete_ok">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="add_recipe_confirmation">Recipe added.</string>
    <string name="delete_recipe_confirmation">Recipe deleted.</string>
    <string name="reset_ok">Reset</string>
    <string name="reset_message">Reset recipe data?</string>
    <string name="reset_data_confirmation">Recipe data reset.</string>
    <string name="pref_key_reset_sample_data">pref_key_reset_sample_data_button</string>
    <string name="preference_reset_sample_data">Reset to sample data</string>
    <string name="pref_key_first_launch">pref_key_first_launch</string>
    <string name="add_recipe_add_image">Add Image</string>
    <string name="choose_image">Choose image</string>
    <string name="recipe_image_description">Recipe image</string>
    <string name="action_edit">Edit Recipe</string>
    <string name="edit_recipe_confirmation">Recipe edited</string>
    <string name="edit_step_next_step_hint">Next step</string>

</resources>
