<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.finaiized.recipmon.app.RecipeViewActivity.RecipeViewFragment">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

    <ImageView
            android:id="@+id/recipe_view_image"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:contentDescription="@string/recipe_image_description"
            android:scaleType="centerCrop"
            android:src="@drawable/pink_cupcake" />

        <TextView
            android:id="@+id/recipe_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/recipe_view_image"
            android:background="@color/main_transparent_0.66"
            android:ellipsize="marquee"
            android:paddingBottom="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:text="@string/add_recipe_name"
            android:textColor="#1a1a1a"
            android:textSize="26sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/recipe_description_label"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:text="@string/add_recipe_description"
        android:textSize="18sp" />

</LinearLayout>