<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#1BBC9B">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/add_recipe_image_view"
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/recipe_image_description"
            android:scaleType="centerCrop"
            android:src="@drawable/pink_cupcake" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/add_recipe_header_recipe"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextRecipeName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="#D9E7F7"
                    android:hint="@string/add_recipe_name"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="#ec000000"
                    android:textColorHint="#262B28" />

                <LinearLayout
                    android:id="@+id/separator"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/editTextRecipeName"
                    android:layout_marginTop="-12dp"
                    android:background="#2D3E50"
                    android:orientation="horizontal" />

                <EditText
                    android:id="@+id/editTextRecipeDescription"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/separator"
                    android:background="#D9E7F7"
                    android:hint="@string/add_recipe_description"
                    android:padding="10dp"
                    android:textColor="#ec000000"
                    android:textColorHint="#262B28" />

                <LinearLayout
                    android:id="@+id/separator2"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/editTextRecipeDescription"
                    android:background="#2D3E50"
                    android:orientation="horizontal" />

                <Button
                    android:id="@+id/add_image_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/separator2"
                    android:background="#D9E7F7"
                    android:drawableLeft="@drawable/ic_action_new_picture"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/add_recipe_add_image"
                    android:textColor="#262B28" />


            </RelativeLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/add_recipe_steps"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/edit_view_steps"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>